traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:6: error: ';' expected but ',' found.
      setPos(getX()),getY())+1)
                    ^TraversalByColumn:8: error: ';' expected but ',' found.
      setPos(getX())+1,0)
                      ^